<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpLogin.SignUpLoginActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="75sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/front_page_bg"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_msg"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/btn_sign_up_bg"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_msg"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/btn_login_bg"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:background="@android:color/transparent"
            android:textColor="@color/colorSkip"
            android:textSize="19sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <ImageView
        android:src="@drawable/front_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>