<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpLogin.LoginActivity"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:padding="30dp"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/et_bg"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/et_bg"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/btn_login_bg"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        tools:targetApi="o"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"/>

    <ImageView
        android:layout_marginTop="-5dp"
        android:src="@drawable/login_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>