<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/tv_log_out"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_yes"
            android:background="@drawable/btn_search"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:paddingVertical="5dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_no"
            android:background="@drawable/btn_search"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:paddingVertical="5dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            tools:targetApi="o"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>



</LinearLayout>